<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".Register">

    <!--Top Background-->
    <View
        android:id="@+id/top_bg"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Heading-->

    <!--Bottom Background-->
    <TextView
        android:id="@+id/add_job_head"
        android:layout_width="260dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/job_app_head"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_bg" />

    <View
        android:id="@+id/bottom_bg"
        android:layout_width="415dp"
        android:layout_height="85dp"
        android:background="@drawable/bottom_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bg" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/work_exp"
        android:inputType="phone"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/edu_qu"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <Button
        android:id="@+id/reg"
        android:layout_width="170dp"
        android:layout_height="@dimen/j_form_submit_width"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="53dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/aclonica"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="382dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/j_app_description"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bg" />
</androidx.constraintlayout.widget.ConstraintLayout>