<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".Register">

    <!--Top Background-->
    <View
        android:id="@+id/top_bg"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Heading-->
    <TextView
        android:id="@+id/add_job_head"
        android:layout_width="@dimen/add_job_height"
        android:layout_height="@dimen/add_job_width"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/add_job"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_bg" />

    <!--Bottom Background-->
    <View
        android:id="@+id/bottom_bg"
        android:layout_width="415dp"
        android:layout_height="85dp"
        android:background="@drawable/bottom_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtcomName"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/c_name"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bg" />

    <EditText
        android:id="@+id/txtPosition"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/Position"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcomName" />

    <EditText
        android:id="@+id/txtEduReq"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/Edu_req"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPosition" />

    <EditText
        android:id="@+id/txtExpReq"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/exp_req"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEduReq" />

    <Button
        android:id="@+id/addJList"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/aclonica"
        android:text="@string/Add_job_list"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtExpReq" />
</androidx.constraintlayout.widget.ConstraintLayout>