<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    tools:context=".MainActivity">

    <View
        android:id="@+id/top_bg"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomenote"
        android:layout_width="186dp"
        android:layout_height="69dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/welcome_note"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_bg" />

    <EditText
        android:id="@+id/log_email"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="19dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/Login_mail_hint"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bg" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:hint="@string/Login_password_hint"
        android:inputType="textPassword"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_email" />

    <Button
        android:id="@+id/login"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_button"
        android:elevation="50dp"
        android:fontFamily="@font/aclonica"
        android:padding="10dp"
        android:text="@string/login_button"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_password" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cancel_btn"
        android:elevation="50dp"
        android:fontFamily="@font/aclonica"
        android:padding="10dp"
        android:text="@string/cancel_button"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:drawableStart="@drawable/baseline_cancel_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <View
        android:id="@+id/bottom_bg"
        android:layout_width="415dp"
        android:layout_height="85dp"
        android:background="@drawable/bottom_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
