<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/cgLname"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="89dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cdInitName"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/initial_name"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cgLname" />

    <EditText
        android:id="@+id/cdAddress"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/address"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cdInitName" />

    <EditText
        android:id="@+id/cdTitle"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cdInitName" />


    <Button
        android:id="@+id/updateGuider"
        android:layout_width="135dp"
        android:layout_height="51dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/aclonica"
        android:text="Update"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cdAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>